Feature: Implementação mongo Cluster no MongoAtlas

--- a/src/MySolution.WebAPi/appsettings.json
+++ b/src/MySolution.WebAPi/appsettings.json
@@ -4,6 +4,11 @@
     "DatabaseName": "admin",
     "CollectionName": "Client"
   },
+  "ClientClusterDatabase": {
+    "ConnectionString": "mongodb+srv://mongo:mongopass@cluster0.d7bonpb.mongodb.net/",
+    "DatabaseName": "Client",
+    "CollectionName": "Clients"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
